Add calendar, day component

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=7acffe1a820094a44e0b",
-    "/css/app.css": "/css/app.css?id=03d014d43197350b50e6",
-    "/css/app-rtl.css": "/css/app-rtl.css?id=03d014d43197350b50e6",
-    "/js/sweetalert.min.js": "/js/sweetalert.min.js?id=45bf2154dab5cd8104c9"
+    "/js/app.js": "/js/app.js?id=78b098a4afc2e2d75160",
+    "/css/app.css": "/css/app.css?id=989fca2dd1acdd2ebb8f",
+    "/css/app-rtl.css": "/css/app-rtl.css?id=989fca2dd1acdd2ebb8f"
 }
