--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.16",
     "axios": "^0.18",
     "bootstrap": "^4.1.1",
     "cross-env": "^5.1",
@@ -22,6 +23,7 @@
     "sass": "^1.22.5",
     "sass-loader": "7.*",
     "sweetalert2": "^8.13.6",
+    "tailwindcss": "^1.1.2",
     "urijs": "^1.17.0",
     "vue": "2.*",
     "vue-router": "^3.1.3",
