--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/spark-aurelius": "*@dev",
         "laravel/tinker": "^1.0",
-        "laravel/spark-aurelius": "*@dev"
+        "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
