--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "cross-env": "^5.1",
     "dinero.js": "^1.6.0",
     "jquery": "^3.2",
+    "laravel-echo": "^1.5.4",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.4",
     "moment": "^2.10.6",
     "popper.js": "^1.12",
     "promise": "^7.1.1",
+    "pusher-js": "^5.0.1",
     "resolve-url-loader": "3.1.0",
     "rtlcss": "^2.2",
     "sass": "^1.22.5",
