--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/passport": "^7.5",
         "laravel/spark-aurelius": "*@dev",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^4.0"
